# the-last-camp-launcher

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: build-windows.yml
brand-concepts/launcher-icons/: TLC1.icns  TLC2.icns
docs/: WINDOWS-BUILD.md  lane-b-flow.html
scripts/: deploy-windows-launcher.sh
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
