[package]
name = "crushbone-launcher"
version = "0.4.0"
description = "Crushbone EverQuest Emulator Launcher"
authors = ["Crushbone"]
edition = "2021"

[lib]
name = "crushbone_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "time"] }
dirs = "5"
anyhow = "1"
thiserror = "2"
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
futures-util = "0.3"
sha2 = "0.10"
hex = "0.4"
